--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <div class="main">
         <div class="leftDiv">
             <div class="image">
-                <img class="mainImage" src="/media/Screenshot 2022-05-16 170350-2.png" alt="">
+                <img class="mainImage" src="/Screenshot 2022-05-16 170350-2.png" alt="">
             </div>
         </div>
         <div>
             <div class="rightDiv">
                 <div class="logo">
                     <div>
-                    <img src="/media/7a252de00b20.png" alt="">
+                    <img src="/7a252de00b20.png" alt="">
                     </div>
                 </div>
                 <div class="formDiv">
@@ -44,7 +44,7 @@
                             or
                         </div>
                         <div class="login">
-                            <span class="icon"><img src="/media/facebook (1).svg" alt=""></span>
+                            <span class="icon"><img src="/facebook (1).svg" alt=""></span>
                             <div><a  class="logText" target="_blank" href="https://en-gb.facebook.com/login/" >Log in with Facebook</a></div>
                         </div>
                         <a class="forgetText" href="https://www.instagram.com/accounts/password/reset/">Forgot password?</a>
@@ -60,14 +60,14 @@
                 <div class="appsPhotos">
                   <div class="aplleImage">
                     <a  href="https://apps.apple.com/app/instagram/id389801252?vt=lo">
-                     <img src="/media/app store.png" alt=""> 
+                     <img src="/app store.png" alt=""> 
                     </a>
                   </div>
                   <div class="googleImage">
                       <a href="https://play.google.com/store/apps/details?id=com.
                        instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DloginPage%26ig_mid%3D
                        778D67FC-F6A0-47C1-B542-241491D02CD2%26utm_content%3Dlo%26utm_medium%3Dbadge">
-                       <img src="/media/google store.png"  alt="">
+                       <img src="/google store.png"  alt="">
                       </a>
                  </div>
                 </div>
